# Daily-Stock-Analysis

./: .env.example  .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: daily_stock_analysis.yml  daily_stock_watchdog.yml
configs/: local.example.json  rss.example.json  rss_sources.example.json
docs/: AUTOMATED_STOCK_SELECTION_FLOW.md  CANDLESTICK_STRATEGY.md  DAILY_WORKFLOW.md  DATA_SOURCES.md  LINE_BOT.md  LINE_SETUP_RECOMMENDED.md  MODEL_TRAINING_DATA_GUARDRAILS.md  OPERATIONS.md  STRATEGY_FRAMEWORK.md  TWSE_OPENAPI.md  XHS_VIDEO_STRATEGY.md  YOU_NEED_TO_PROVIDE.md
examples/: news.csv  price_1h.csv  price_5m.csv  price_history.csv  stocks.csv
reports/: latest_state.json  line_sent_2026-04-29.txt  line_sent_2026-04-30.txt  line_sent_2026-05-01.txt  stock_signals_2026-04-27.html  stock_signals_2026-04-28.html  stock_signals_2026-04-28.md  stock_signals_2026-04-29.html  stock_signals_2026-04-29.md  stock_signals_2026-04-30.html  stock_signals_2026-05-01.html
scripts/: publish_report_pages.ps1  run_daily.ps1
stock_signal_system/: __init__.py  analysis_dashboard.py  cli.py  config.py  industry.py  line_bot_server.py  models.py  notify.py  pages_publish.py  pipeline.py  report.py  training_data.py  translation.py  validation.py  workflow.py
tests/: __init__.py  test_analysis_dashboard.py  test_candlestick.py  test_line_bot_server.py  test_market_structure.py  test_notify.py  test_pipeline.py  test_report_html.py  test_rss_classification.py  test_training_data.py  test_translation.py  test_validation.py  test_workflow.py
(+12 files in other folders)
